#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2010-12-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.85 released.

        * Remove testing print statements from Makefile.PL.


2010-12-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.84 released.

        * Added conditional to load CPAN::MyConfig.

        * Removed -type f from find in Makefile.PL so
          symbolic links can be located


2010-12-18  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.83 released.

        * Temporarily undef $ENV{PERL5_CPAN_IS_RUNNING} in
          order to defeat JSON user prompt.


2010-12-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.82 released.

        * Added JSON to pre-req treatment to defeat prompt.


2010-12-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.81 released.

        * Fixed testpid() to work with
          IO::CaptureOutput::capture.

        * Added Password: test to when looking for cmd prompt
          after login attempt (needed for Solaris).


2010-12-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.80 released.

        * Version 0.79 failed to contain changes listed


2010-12-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.79 released.

        * Fixed logic to find module build dir in Makefile.PL

        * Fixed timeout bug in output parser

        * Added alarm timeout for password function when ssh
          makes new connection and dialogue asks for permission
          to connect. Timeout is used for when FullAuto runs in