@@ -15,7 +15,7 @@ provides:
     file: lib/Net/FullAuto/FA_Core.pm
   Net::FullAuto:
     file: lib/Net/FullAuto.pm
-    version: 0.85
+    version: 0.86
   Net::FullAuto::FA_Core:
     file: lib/Net/FullAuto/FA_Core.pm
   Net::FullAuto::FA_DB:
@@ -63,4 +63,4 @@ requires:
   BerkeleyDB::Manager: 0
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 0.85
+version: 0.86
