@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.85';
+our $VERSION='0.86';
 
 
 use 5.005;
