@@ -25,6 +25,18 @@
 ################################################################
 
 
+2010-12-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.86 released.
+
+        * Merry Christmas!
+
+        * Added test for Berkeley DB version 4.5 or greater
+          in order to use MVCC.
+
+        * Changed DB location in FA_Core.pm.
+
+
 2010-12-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.85 released.
